# cpp_sstm

./: CMakeLists.txt  Taskfile.yml
include/cpp-sstm/: sstm.hpp  transaction.hpp  tvar.hpp  value_container.hpp  versionning.hpp
src/: transactional.cpp
